--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,43 +5,29 @@
     "terminal.integrated.enablePersistentSessions": true,
     "terminal.integrated.confirmOnExit": "never",
     "terminal.integrated.confirmOnKill": "never",
-    "audioCues.lineHasBreakpoint": "off",
-    "audioCues.lineHasError": "off",
-    "audioCues.lineHasWarning": "off",
-    "audioCues.lineHasInlineSuggestion": "off",
-    "audioCues.noInlayHints": "off",
-    "audioCues.onDebugBreak": "off",
-    "audioCues.notebookCellCompleted": "off",
-    "audioCues.notebookCellFailed": "off",
-    "audioCues.taskCompleted": "off",
-    "audioCues.taskFailed": "off",
-    "audioCues.terminalQuickFix": "off",
-    "audioCues.terminalCommandFailed": "off",
-    "audioCues.chatRequestSent": "off",
-    "audioCues.chatResponseReceived": "off",
     "accessibility.signals.lineHasBreakpoint": {
-        "sound": "off"
+      "sound": "off"
     },
     "accessibility.signals.lineHasError": {
-        "sound": "off"
+      "sound": "off"
     },
     "accessibility.signals.lineHasWarning": {
-        "sound": "off"
+      "sound": "off"
     },
     "accessibility.signals.terminalCommandFailed": {
-        "sound": "off"
+      "sound": "off"
     },
     "accessibility.signals.notebookCellCompleted": {
-        "sound": "off"
+      "sound": "off"
     },
     "accessibility.signals.notebookCellFailed": {
-        "sound": "off"
+      "sound": "off"
     },
     "accessibility.signals.chatRequestSent": {
-        "sound": "off"
+      "sound": "off"
     },
     "accessibility.signals.chatResponseReceived": {
-        "sound": "off"
+      "sound": "off"
     },
   "workbench.colorTheme": "Default Dark+",
   "editor.inlayHints.enabled": "off",
@@ -74,5 +60,23 @@
   "files.associations": {
     "*.html": "html",
     ".htaccess": "apacheconf"
+  },
+  "accessibility.signals.lineHasInlineSuggestion": {
+    "sound": "off"
+  },
+  "accessibility.signals.terminalQuickFix": {
+    "sound": "off"
+  },
+  "accessibility.signals.onDebugBreak": {
+    "sound": "off"
+  },
+  "accessibility.signals.noInlayHints": {
+    "sound": "off"
+  },
+  "accessibility.signals.taskCompleted": {
+    "sound": "off"
+  },
+  "accessibility.signals.taskFailed": {
+    "sound": "off"
   }
 }
