--- a/React website/package.json
+++ b/React website/package.json
@@ -7,9 +7,11 @@
   "author": "Susin Group",
   "scripts": {
     "dev": "vite",
+    "dev:clean": "vite --force",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rm -rf node_modules/.vite && rm -rf dist"
   },
   "dependencies": {
     "axios": "^1.13.2",
